--- a/ChernoCpp/HelloWorld08/HelloWorld08/HelloWorld08.vcxproj
+++ b/ChernoCpp/HelloWorld08/HelloWorld08/HelloWorld08.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d7c2c422-9c04-4fe7-b930-2e6212660b17}</ProjectGuid>
-    <RootNamespace>HelloWorld01</RootNamespace>
+    <ProjectGuid>{783adab2-98ef-4f4b-b75e-13871abc2d26}</ProjectGuid>
+    <RootNamespace>HelloWorld08</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Log.cpp" />
-    <ClCompile Include="Math.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Log.h" />
+    <ClCompile Include="Main09.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
