--- a/ChernoCpp/HelloWorld08/HelloWorld08/HelloWorld08.vcxproj
+++ b/ChernoCpp/HelloWorld08/HelloWorld08/HelloWorld08.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main09.cpp" />
+    <ClCompile Include="Log.cpp" />
+    <ClCompile Include="Main10.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Log.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
