--- a/ChernoCpp/HelloWorld20/HelloWorld20/HelloWorld20.vcxproj.filters
+++ b/ChernoCpp/HelloWorld20/HelloWorld20/HelloWorld20.vcxproj.filters
@@ -15,10 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Main23.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Static.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main24.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
