--- a/ChernoCpp/HelloWorld33/HelloWorld33/HelloWorld33.vcxproj
+++ b/ChernoCpp/HelloWorld33/HelloWorld33/HelloWorld33.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main35.cpp" />
+    <ClCompile Include="Main35_1.cpp" />
+    <ClCompile Include="Main35_2.cpp" />
+    <ClCompile Include="Main35_3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
