--- a/ChernoCpp/HelloWorld33/HelloWorld33/HelloWorld33.vcxproj.filters
+++ b/ChernoCpp/HelloWorld33/HelloWorld33/HelloWorld33.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main40_1.cpp">
+    <ClCompile Include="Main42_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main42_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
