--- a/ChernoCpp/HelloWorld44/HelloWorld44/HelloWorld44.vcxproj.filters
+++ b/ChernoCpp/HelloWorld44/HelloWorld44/HelloWorld44.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Main44_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Main44_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
