--- a/ChernoCpp/HelloWorld44/HelloWorld44/HelloWorld44.vcxproj
+++ b/ChernoCpp/HelloWorld44/HelloWorld44/HelloWorld44.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main44_1.cpp" />
+    <ClCompile Include="Main44_2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
